@startuml
class Editeur {
    - texte : String
    - pressePapier : PressePapier
    - selection : Selection

    + selectText() : String
    + removeText() : void
    + ReplaceText(text:String) : void
    + addText(text:String) : void
    + copier() : void
    + couper() : void
    + coller() : void
}

class PressePapier{
    - content : String
    + get() : String
    + set(String text) : void
}

class Selection {
    - start : int
    - end : int
    + update(int start, int end) : void
}

Interface Command {
    + execute() : void
}

class AddText {
    - buffer : Editeur
    + execute() : void
}

class Couper {
    - buffer : Editeur
    + execute() : void
}

class Copier {
    - buffer : Editeur
    + execute() : void
}

class Coller {
    - buffer : diteur
    + execute() : void
}

class SelectionCommand {
    - buffer : Editeur
    + execute() : void
}

class Invoker {
    - command : Command
    + executeCommand(Command cmd) : void
}



' Relations

Editeur <-- Command
Command <|.. Copier
Command <|.. Couper
Command <|.. Coller
Command <|.. SelectionCommand
Command <|.. AddText


Editeur <-- PressePapier : "1..1"
Editeur <-- Selection : "1..1"
Invoker --> Command : "1..*"


@enduml
